configurations/incremental/components/static-host-based-routing-exposed/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-bootstrap
  labels:
    confluent-platform: "true"
    cr-name: kafka
    type: kafka
spec:
  ports:
    - name: external
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka
    confluent-platform: "true"
    type: kafka
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - kafka.$(NAMESPACE).kubernetes-bootcamp.confluent.io
        - b0.$(NAMESPACE).kubernetes-bootcamp.confluent.io
        - b1.$(NAMESPACE).kubernetes-bootcamp.confluent.io
        - b2.$(NAMESPACE).kubernetes-bootcamp.confluent.io
  rules:
    - host: kafka.$(NAMESPACE).kubernetes-bootcamp.confluent.io
      http:
        paths:
          - backend:
              serviceName: kafka-bootstrap
              servicePort: 9092
    - host: b0.$(NAMESPACE).kubernetes-bootcamp.confluent.io
      http:
        paths:
          - backend:
              serviceName: kafka-0-internal
              servicePort: 9092

    - host: b1.$(NAMESPACE).kubernetes-bootcamp.confluent.io
      http:
        paths:
          - backend:
              serviceName: kafka-1-internal
              servicePort: 9092

    - host: b2.$(NAMESPACE).kubernetes-bootcamp.confluent.io
      http:
        paths:
          - backend:
              serviceName: kafka-2-internal
              servicePort: 9092
